gen/TUMCADgrammParser.py
# Generated from C:/Users/KATCO/PycharmProjects/PBL\TUMCADgramm.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class TUMCADgrammParser ( Parser ):

    grammarFileName = "TUMCADgramm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'Return'", "'}'", "'If'", "'('", 
                     "')'", "'else'", "'Foreach'", "'in'", "'End'", "'Continue'", 
                     "'While'", "'Coord'", "'Plot'", "'Area'", "'CreateBasement'", 
                     "'['", "']'", "'.'", "'''", "'Func'", "'void'", "','", 
                     "';'", "'-'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Digit", "Alpha", 
                      "Bool_lit", "Char", "Type", "Arith_op", "Comp_op", 
                      "Cond_op", "Assign_op", "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_statement = 2
    RULE_method_call = 3
    RULE_name = 4
    RULE_alpha_string = 5
    RULE_field_declaration = 6
    RULE_int_lit = 7
    RULE_double_lit = 8
    RULE_char_lit = 9
    RULE_string_lit = 10
    RULE_method_declaration = 11
    RULE_param_in = 12
    RULE_var_declaration = 13
    RULE_expr = 14
    RULE_bin_op = 15
    RULE_literal = 16
    RULE_callout_arg = 17
    RULE_loc = 18

    ruleNames =  [ "program", "block", "statement", "method_call", "name", 
                   "alpha_string", "field_declaration", "int_lit", "double_lit", 
                   "char_lit", "string_lit", "method_declaration", "param_in", 
                   "var_declaration", "expr", "bin_op", "literal", "callout_arg", 
                   "loc" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    Digit=27
    Alpha=28
    Bool_lit=29
    Char=30
    Type=31
    Arith_op=32
    Comp_op=33
    Cond_op=34
    Assign_op=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(TUMCADgrammParser.BlockContext,0)


        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TUMCADgrammParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TUMCADgrammParser.StatementContext)
            else:
                return self.getTypedRuleContext(TUMCADgrammParser.StatementContext,i)


        def expr(self):
            return self.getTypedRuleContext(TUMCADgrammParser.ExprContext,0)


        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = TUMCADgrammParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(TUMCADgrammParser.T__0)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TUMCADgrammParser.T__3) | (1 << TUMCADgrammParser.T__7) | (1 << TUMCADgrammParser.T__9) | (1 << TUMCADgrammParser.T__10) | (1 << TUMCADgrammParser.T__11) | (1 << TUMCADgrammParser.T__12) | (1 << TUMCADgrammParser.T__13) | (1 << TUMCADgrammParser.T__14) | (1 << TUMCADgrammParser.T__15) | (1 << TUMCADgrammParser.T__20) | (1 << TUMCADgrammParser.Alpha) | (1 << TUMCADgrammParser.Type))) != 0):
                self.state = 41
                self.statement()
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TUMCADgrammParser.T__1:
                self.state = 47
                self.match(TUMCADgrammParser.T__1)
                self.state = 48
                self.expr(0)


            self.state = 51
            self.match(TUMCADgrammParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loc(self):
            return self.getTypedRuleContext(TUMCADgrammParser.LocContext,0)


        def Assign_op(self):
            return self.getToken(TUMCADgrammParser.Assign_op, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TUMCADgrammParser.ExprContext)
            else:
                return self.getTypedRuleContext(TUMCADgrammParser.ExprContext,i)


        def var_declaration(self):
            return self.getTypedRuleContext(TUMCADgrammParser.Var_declarationContext,0)


        def method_declaration(self):
            return self.getTypedRuleContext(TUMCADgrammParser.Method_declarationContext,0)


        def field_declaration(self):
            return self.getTypedRuleContext(TUMCADgrammParser.Field_declarationContext,0)


        def method_call(self):
            return self.getTypedRuleContext(TUMCADgrammParser.Method_callContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TUMCADgrammParser.StatementContext)
            else:
                return self.getTypedRuleContext(TUMCADgrammParser.StatementContext,i)


        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = TUMCADgrammParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.loc()
                self.state = 54
                self.match(TUMCADgrammParser.Assign_op)
                self.state = 55
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.var_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.var_declaration()
                self.state = 59
                self.match(TUMCADgrammParser.Assign_op)
                self.state = 60
                self.expr(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 62
                self.method_declaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 63
                self.field_declaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 64
                self.method_call()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 65
                self.match(TUMCADgrammParser.T__3)
                self.state = 66
                self.match(TUMCADgrammParser.T__4)
                self.state = 67
                self.expr(0)
                self.state = 68
                self.match(TUMCADgrammParser.T__5)
                self.state = 69
                self.match(TUMCADgrammParser.T__0)
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 70
                    self.statement()
                    self.state = 73 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TUMCADgrammParser.T__3) | (1 << TUMCADgrammParser.T__7) | (1 << TUMCADgrammParser.T__9) | (1 << TUMCADgrammParser.T__10) | (1 << TUMCADgrammParser.T__11) | (1 << TUMCADgrammParser.T__12) | (1 << TUMCADgrammParser.T__13) | (1 << TUMCADgrammParser.T__14) | (1 << TUMCADgrammParser.T__15) | (1 << TUMCADgrammParser.T__20) | (1 << TUMCADgrammParser.Alpha) | (1 << TUMCADgrammParser.Type))) != 0)):
                        break

                self.state = 75
                self.match(TUMCADgrammParser.T__2)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TUMCADgrammParser.T__6:
                    self.state = 76
                    self.match(TUMCADgrammParser.T__6)
                    self.state = 77
                    self.match(TUMCADgrammParser.T__0)
                    self.state = 79 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 78
                        self.statement()
                        self.state = 81 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TUMCADgrammParser.T__3) | (1 << TUMCADgrammParser.T__7) | (1 << TUMCADgrammParser.T__9) | (1 << TUMCADgrammParser.T__10) | (1 << TUMCADgrammParser.T__11) | (1 << TUMCADgrammParser.T__12) | (1 << TUMCADgrammParser.T__13) | (1 << TUMCADgrammParser.T__14) | (1 << TUMCADgrammParser.T__15) | (1 << TUMCADgrammParser.T__20) | (1 << TUMCADgrammParser.Alpha) | (1 << TUMCADgrammParser.Type))) != 0)):
                            break

                    self.state = 83
                    self.match(TUMCADgrammParser.T__2)


                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 87
                self.match(TUMCADgrammParser.T__7)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(TUMCADgrammParser.T__8)
                self.state = 90
                self.expr(0)
                self.state = 91
                self.match(TUMCADgrammParser.T__0)
                self.state = 93 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 92
                        self.statement()

                    else:
                        raise NoViableAltException(self)
                    self.state = 95 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 97
                self.match(TUMCADgrammParser.T__9)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 98
                self.match(TUMCADgrammParser.T__10)
                self.state = 99
                self.match(TUMCADgrammParser.T__2)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 100
                self.match(TUMCADgrammParser.T__11)
                self.state = 101
                self.match(TUMCADgrammParser.T__4)
                self.state = 102
                self.expr(0)
                self.state = 103
                self.match(TUMCADgrammParser.T__5)
                self.state = 104
                self.match(TUMCADgrammParser.T__0)
                self.state = 106 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 105
                        self.statement()

                    else:
                        raise NoViableAltException(self)
                    self.state = 108 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 110
                self.match(TUMCADgrammParser.T__9)
                self.state = 111
                self.match(TUMCADgrammParser.T__2)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 112
                self.match(TUMCADgrammParser.T__12)
                self.state = 113
                self.match(TUMCADgrammParser.T__4)
                self.state = 115 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 114
                    self.expr(0)
                    self.state = 117 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TUMCADgrammParser.T__4) | (1 << TUMCADgrammParser.T__18) | (1 << TUMCADgrammParser.T__19) | (1 << TUMCADgrammParser.T__24) | (1 << TUMCADgrammParser.T__25) | (1 << TUMCADgrammParser.Digit) | (1 << TUMCADgrammParser.Alpha) | (1 << TUMCADgrammParser.Bool_lit) | (1 << TUMCADgrammParser.WS))) != 0)):
                        break

                self.state = 119
                self.match(TUMCADgrammParser.T__5)
                self.state = 120
                self.match(TUMCADgrammParser.T__0)
                self.state = 121
                self.statement()
                self.state = 122
                self.match(TUMCADgrammParser.T__2)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 124
                self.match(TUMCADgrammParser.T__13)
                self.state = 125
                self.match(TUMCADgrammParser.T__4)
                self.state = 127 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 126
                    self.expr(0)
                    self.state = 129 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TUMCADgrammParser.T__4) | (1 << TUMCADgrammParser.T__18) | (1 << TUMCADgrammParser.T__19) | (1 << TUMCADgrammParser.T__24) | (1 << TUMCADgrammParser.T__25) | (1 << TUMCADgrammParser.Digit) | (1 << TUMCADgrammParser.Alpha) | (1 << TUMCADgrammParser.Bool_lit) | (1 << TUMCADgrammParser.WS))) != 0)):
                        break

                self.state = 131
                self.match(TUMCADgrammParser.T__5)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 133
                self.match(TUMCADgrammParser.T__14)
                self.state = 134
                self.match(TUMCADgrammParser.T__4)
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 135
                    self.expr(0)
                    self.state = 138 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TUMCADgrammParser.T__4) | (1 << TUMCADgrammParser.T__18) | (1 << TUMCADgrammParser.T__19) | (1 << TUMCADgrammParser.T__24) | (1 << TUMCADgrammParser.T__25) | (1 << TUMCADgrammParser.Digit) | (1 << TUMCADgrammParser.Alpha) | (1 << TUMCADgrammParser.Bool_lit) | (1 << TUMCADgrammParser.WS))) != 0)):
                        break

                self.state = 140
                self.match(TUMCADgrammParser.T__5)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 142
                self.match(TUMCADgrammParser.T__15)
                self.state = 143
                self.match(TUMCADgrammParser.T__4)
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 144
                    self.expr(0)
                    self.state = 147 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TUMCADgrammParser.T__4) | (1 << TUMCADgrammParser.T__18) | (1 << TUMCADgrammParser.T__19) | (1 << TUMCADgrammParser.T__24) | (1 << TUMCADgrammParser.T__25) | (1 << TUMCADgrammParser.Digit) | (1 << TUMCADgrammParser.Alpha) | (1 << TUMCADgrammParser.Bool_lit) | (1 << TUMCADgrammParser.WS))) != 0)):
                        break

                self.state = 149
                self.match(TUMCADgrammParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(TUMCADgrammParser.NameContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TUMCADgrammParser.StatementContext)
            else:
                return self.getTypedRuleContext(TUMCADgrammParser.StatementContext,i)


        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_method_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_call" ):
                listener.enterMethod_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_call" ):
                listener.exitMethod_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)




    def method_call(self):

        localctx = TUMCADgrammParser.Method_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.name()
            self.state = 154
            self.match(TUMCADgrammParser.T__4)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TUMCADgrammParser.T__3) | (1 << TUMCADgrammParser.T__7) | (1 << TUMCADgrammParser.T__9) | (1 << TUMCADgrammParser.T__10) | (1 << TUMCADgrammParser.T__11) | (1 << TUMCADgrammParser.T__12) | (1 << TUMCADgrammParser.T__13) | (1 << TUMCADgrammParser.T__14) | (1 << TUMCADgrammParser.T__15) | (1 << TUMCADgrammParser.T__20) | (1 << TUMCADgrammParser.Alpha) | (1 << TUMCADgrammParser.Type))) != 0):
                self.state = 155
                self.statement()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(TUMCADgrammParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alpha_string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TUMCADgrammParser.Alpha_stringContext)
            else:
                return self.getTypedRuleContext(TUMCADgrammParser.Alpha_stringContext,i)


        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = TUMCADgrammParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 163
                    self.alpha_string()

                else:
                    raise NoViableAltException(self)
                self.state = 166 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Alpha_stringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Alpha(self, i:int=None):
            if i is None:
                return self.getTokens(TUMCADgrammParser.Alpha)
            else:
                return self.getToken(TUMCADgrammParser.Alpha, i)

        def Digit(self, i:int=None):
            if i is None:
                return self.getTokens(TUMCADgrammParser.Digit)
            else:
                return self.getToken(TUMCADgrammParser.Digit, i)

        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_alpha_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlpha_string" ):
                listener.enterAlpha_string(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlpha_string" ):
                listener.exitAlpha_string(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlpha_string" ):
                return visitor.visitAlpha_string(self)
            else:
                return visitor.visitChildren(self)




    def alpha_string(self):

        localctx = TUMCADgrammParser.Alpha_stringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_alpha_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 168
                    self.match(TUMCADgrammParser.Alpha)

                else:
                    raise NoViableAltException(self)
                self.state = 171 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 176
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 173
                    self.match(TUMCADgrammParser.Digit) 
                self.state = 178
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Type(self):
            return self.getToken(TUMCADgrammParser.Type, 0)

        def name(self):
            return self.getTypedRuleContext(TUMCADgrammParser.NameContext,0)


        def int_lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TUMCADgrammParser.Int_litContext)
            else:
                return self.getTypedRuleContext(TUMCADgrammParser.Int_litContext,i)


        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_field_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declaration" ):
                listener.enterField_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declaration" ):
                listener.exitField_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_declaration" ):
                return visitor.visitField_declaration(self)
            else:
                return visitor.visitChildren(self)




    def field_declaration(self):

        localctx = TUMCADgrammParser.Field_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_field_declaration)
        self._la = 0 # Token type
        try:
            self.state = 192
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.match(TUMCADgrammParser.Type)
                self.state = 180
                self.name()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.match(TUMCADgrammParser.Type)
                self.state = 182
                self.name()
                self.state = 183
                self.match(TUMCADgrammParser.T__16)
                self.state = 184
                self.int_lit()
                self.state = 185
                self.match(TUMCADgrammParser.T__17)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==TUMCADgrammParser.T__16:
                    self.state = 186
                    self.match(TUMCADgrammParser.T__16)
                    self.state = 187
                    self.int_lit()
                    self.state = 188
                    self.match(TUMCADgrammParser.T__17)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Int_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Digit(self, i:int=None):
            if i is None:
                return self.getTokens(TUMCADgrammParser.Digit)
            else:
                return self.getToken(TUMCADgrammParser.Digit, i)

        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_int_lit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt_lit" ):
                listener.enterInt_lit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt_lit" ):
                listener.exitInt_lit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt_lit" ):
                return visitor.visitInt_lit(self)
            else:
                return visitor.visitChildren(self)




    def int_lit(self):

        localctx = TUMCADgrammParser.Int_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_int_lit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 194
                    self.match(TUMCADgrammParser.Digit)

                else:
                    raise NoViableAltException(self)
                self.state = 197 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Double_litContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def int_lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TUMCADgrammParser.Int_litContext)
            else:
                return self.getTypedRuleContext(TUMCADgrammParser.Int_litContext,i)


        def getRuleIndex(self):
            return TUMCADgrammParser.RULE_double_lit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDouble_lit" ):
                listener.enterDouble_lit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDouble_lit" ):
                listener.exitDouble_lit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDouble_lit" ):
                return visitor.visitDouble_lit(self)
            else:
                return visitor.visitChildren(self)




    def double_lit(self):

        localctx = TUMCADgrammParser.Double_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_double_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TUMCADgrammParser.Digit:
                self.state = 199
                self.int_lit()
                self.state = 204
                self._errHandler.sync(self)
                _la = self._input.LA(1)
